--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,9 +6,10 @@
 }
 
 body {
-  background: linear-gradient(pink, lightpink, hotpink);
+  background: ghostwhite;
   height: 100vh;
   width: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 .main {
@@ -17,35 +19,37 @@ body {
 }
 
 h1 {
-  margin-top: 50px;
   text-align: center;
   font-size: 2rem;
-  color: rgb(117, 117, 117);
+  background: linear-gradient(rgb(0, 0, 0), white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .form {
   position: relative;
   font-size: 2rem;
-  width: 40%;
-  height: 5%;
+  width: 50%;
+  
 }
 
 .form input {
   width: 100%;
   height: 40px;
-  color: dodgerblue;
+  color: rgb(160, 160, 160);
   font-size: 1rem;
   border: none;
   outline: none;
-  border-bottom: 2px solid dodgerblue;
+  border-bottom: 1px solid rgb(117, 115, 115);
   margin-top: 10px;
 }
 
 .to-btn {
   border: none;
-  width: 70px;
-  height: 35px;
-  background-color: dodgerblue;
+  border-radius: 50px;
+  padding: 5px 10px;
+  text-align: center;
+  background-color: black;
   color: white;
   cursor: pointer;
 }
@@ -66,20 +70,17 @@ h1 {
 
 .todo {
   margin: 50px;
-  background-color: rgb(212, 208, 200);
   color: black;
   display: flex;
-  font-size: 2rem;
+  font-size: 1rem;
   justify-content: space-between;
   align-items: center;
   transition: all 10s ease;
- 
 }
 
 .trash {
-  background-color: black;
-  color: white;
-  width:20%;
+  
+  width: 20%;
   height: 40px;
   cursor: pointer;
   border: none;
@@ -91,4 +92,10 @@ h1 {
 
 .trash:active {
   opacity: 0.3;
+}
+
+.fa-trash-alt{
+
+  pointer-events: none;
+
 }
